# yt-music

./: .gitignore  README.md  config.json.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml
yt_music/: __main__.py  __version__.py  __yt_music__.py
